--- a/case 01/index.html
+++ b/case 01/index.html
@@ -1,1 +1,30 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="box red"></div>
+        <div class="box green"></div>
+        <div class="box orange"></div>
+        <div class="box pink"></div>
+
+        <div class="center-box">
+            <div class="center-circle"></div>
+        </div>
+
+        <div class="lift-up-shape"></div>
+        <div class="middle-up-shape"></div>
+        <div class="right-up-shape"></div>
+
+        <div class="left-down-shape"></div>
+        <div class="middle-down-shape"></div>
+        <div class="right-down-shape"></div>
+    </div>
+
+</body>
+</html>
