--- a/case 01/index.html
+++ b/case 01/index.html
@@ -17,7 +17,7 @@
             <div class="center-circle"></div>
         </div>
 
-        <div class="lift-up-shape"></div>
+        <div class="left-up-shape"></div>
         <div class="middle-up-shape"></div>
         <div class="right-up-shape"></div>
 
